As a user I can see my account details
